# lirckbd

./: AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  config.h  config.h.in  config.status  configure  configure.ac  lirckb.c  lirckb.h  lirckbd.c  lirckbd.h  logging.c  logging.h  parse.c  parse.h  uinpdev.c  uinpdev.h
.deps/: lirckb.Po  logging.Po  parse.Po  uinpdev.Po
man/: Makefile.am  Makefile.in  lirckbd.1  lirckbd.sgml
